--- a/app/src/main/res/layout/activity_insertar_animales.xml
+++ b/app/src/main/res/layout/activity_insertar_animales.xml
@@ -4,109 +4,129 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8F5E9"
+    android:background="@drawable/imgfondoini"
     tools:context=".InsertarAnimales">
 
     <EditText
         android:id="@+id/tbNombreAnimal"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Nombre del Animal"
         android:inputType="text"
-        android:background="@drawable/edittext_background"
-        android:textColor="#388E3C"
-        android:textSize="16sp"
-        android:padding="12dp"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tbRaza"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Raza del Animal"
         android:inputType="text"
-        android:background="@drawable/edittext_background"
-        android:textColor="#388E3C"
-        android:textSize="16sp"
-        android:padding="12dp"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbNombreAnimal" />
 
     <EditText
         android:id="@+id/tbAlimentacion"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="95dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Alimentacion del Animal"
         android:inputType="text"
-        android:background="@drawable/edittext_background"
-        android:textColor="#388E3C"
-        android:textSize="16sp"
-        android:padding="12dp"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbRaza" />
 
     <EditText
         android:id="@+id/tbAnioNacimiento"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="93dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Año Nacimiento"
         android:inputType="text"
-        android:background="@drawable/edittext_background"
-        android:textColor="#388E3C"
-        android:textSize="16sp"
-        android:padding="12dp"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbAlimentacion" />
 
     <EditText
         android:id="@+id/tbDescripcion"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="97dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Descripcion"
         android:inputType="text"
-        android:background="@drawable/edittext_background"
-        android:textColor="#388E3C"
-        android:textSize="16sp"
-        android:padding="12dp"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbAnioNacimiento" />
 
     <Button
         android:id="@+id/bGuardarAnimal"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="152dp"
-        android:background="#A5D6A7"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/dark_green"
         android:text="GUARDAR ANIMAL"
-        android:textColor="#1B5E20"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbDescripcion" />
 
     <EditText
         android:id="@+id/tbFechaIngreso"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="74dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
+        android:hint="Fecha Ingreso"
         android:inputType="date"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbDescripcion" />
 
