--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,51 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/imgfondoini"
     tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/tbCorreoAcceso"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="149dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="text"
+        android:background="@drawable/edittext_background"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
         android:id="@+id/tbContrasenaAcceso"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="87dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
+        android:background="@drawable/edittext_background"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbCorreoAcceso" />
 
     <Button
-        android:id="@+id/bAcceder"
-        android:layout_width="wrap_content"
+        android:id="@+id/bRegistrarse"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="78dp"
-        android:layout_marginTop="116dp"
-        android:text="ACCEDER"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbContrasenaAcceso" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/dark_green"
+        android:text="REGISTRARSE"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/bAcceder"
+        app:layout_constraintTop_toBottomOf="@+id/tbContrasenaAcceso"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/bRegistrarse"
-        android:layout_width="wrap_content"
+        android:id="@+id/bAcceder"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="119dp"
-        android:backgroundTint="#952A2A"
-        android:text="REGISTRARSE"
-        app:layout_constraintStart_toEndOf="@+id/bAcceder"
-        app:layout_constraintTop_toBottomOf="@+id/tbContrasenaAcceso" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/aqua_green"
+        android:text="ACCEDER"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbContrasenaAcceso"
+        app:layout_constraintEnd_toStartOf="@+id/bRegistrarse" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="303dp"
+        android:layout_height="183dp"
+        android:layout_marginTop="56dp"
+        android:src="@drawable/imginicio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
