--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,88 +4,141 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fregis"
     tools:context=".RegistroActivity">
 
     <EditText
-        android:id="@+id/tbRolUsuario"
-        android:layout_width="373dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="Rol"
-        android:inputType="text"
-        android:text="Rol"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbTelefono" />
-
-    <EditText
         android:id="@+id/tbNombre"
-        android:layout_width="370dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="text"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:elevation="4dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tbApellidos"
-        android:layout_width="370dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Apellidos"
         android:inputType="text"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:elevation="4dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbNombre" />
 
-    <Button
-        android:id="@+id/bRegistrar"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/tbCorreo"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="185dp"
-        android:text="REGISTRARSE"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:ems="10"
+        android:hint="Correo Electronico"
+        android:inputType="textEmailAddress"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:elevation="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbTelefono" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbApellidos" />
 
     <EditText
         android:id="@+id/tbContrasena"
-        android:layout_width="374dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:elevation="4dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbCorreo" />
 
     <EditText
         android:id="@+id/tbTelefono"
-        android:layout_width="375dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Telefono"
         android:inputType="phone"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:elevation="4dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbContrasena" />
 
     <EditText
-        android:id="@+id/tbCorreo"
-        android:layout_width="370dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
+        android:id="@+id/tbRolUsuario"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
-        android:hint="Correo Electronico"
-        android:inputType="textEmailAddress"
+        android:hint="Rol"
+        android:text="Usuario"
+        android:inputType="text"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:elevation="4dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbApellidos" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbTelefono" />
+
+    <Button
+        android:id="@+id/bRegistrar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="REGISTRARSE"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/green"
+        android:padding="16dp"
+        android:elevation="6dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbRolUsuario" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
