--- a/app/src/main/res/layout/activity_insertar_animales.xml
+++ b/app/src/main/res/layout/activity_insertar_animales.xml
@@ -102,13 +102,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="184dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/dark_green"
         android:text="GUARDAR ANIMAL"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbDescripcion" />
 
@@ -117,7 +117,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
@@ -128,6 +128,36 @@
         android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbDescripcion" />
+        app:layout_constraintTop_toBottomOf="@+id/bGuardarAnimal" />
+
+    <Button
+        android:id="@+id/bAbrirGaleria"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/dark_green"
+        android:text="ABRIR GALERÍA"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbFechaIngreso" />
+
+    <ImageView
+        android:id="@+id/animalImageView"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="Animal Image"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/bAbrirGaleria"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/pickimg" /> <!-- Placeholder image -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
