--- a/app/src/main/res/layout/activity_insertar_animales.xml
+++ b/app/src/main/res/layout/activity_insertar_animales.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/imgfondoini"
-    tools:context=".InsertarAnimales">
+    tools:context=".AccionesAnimales.InsertarAnimales">
 
     <EditText
         android:id="@+id/tbNombreAnimal"
@@ -97,20 +97,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbAnioNacimiento" />
 
-    <Button
-        android:id="@+id/bGuardarAnimal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/dark_green"
-        android:text="GUARDAR ANIMAL"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
-
     <EditText
         android:id="@+id/tbFechaIngreso"
         android:layout_width="0dp"
@@ -136,11 +122,23 @@
         android:layout_height="159dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/edittext_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbFechaIngreso"
         app:srcCompat="@drawable/imginicio" /> <!-- Placeholder image -->
 
+    <Button
+        android:id="@+id/bGuardarAnimal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/dark_green"
+        android:text="GUARDAR ANIMAL"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
