--- a/app/src/main/res/layout/item_animales.xml
+++ b/app/src/main/res/layout/item_animales.xml
@@ -101,8 +101,8 @@
 
         <ImageView
             android:id="@+id/imagenAnimal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
