--- a/app/src/main/res/layout/item_usuarios.xml
+++ b/app/src/main/res/layout/item_usuarios.xml
@@ -23,81 +23,66 @@
             android:src="@drawable/fcard"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/NombreAnimal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="Nombre"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imagenAnimal"
+            app:layout_constraintStart_toStartOf="@+id/backgroundImage"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/RazaAnimal"
+            android:id="@+id/ApellidosUsuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:text="Raza"
+            android:text="Apellidos"
             android:textColor="@color/dark_green"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/imagenAnimal"
+            app:layout_constraintStart_toStartOf="@+id/backgroundImage"
             app:layout_constraintTop_toBottomOf="@id/NombreAnimal" />
 
         <TextView
-            android:id="@+id/AlimentacionAnimal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:text="Alimentacion"
-            android:textColor="@color/dark_green"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/imagenAnimal"
-            app:layout_constraintTop_toBottomOf="@id/RazaAnimal" />
-
-        <TextView
-            android:id="@+id/AnioAnimal"
+            android:id="@+id/CorreoUsuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Año"
+            android:text="Correo"
             android:textColor="@color/dark_green"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/AlimentacionAnimal"
-            app:layout_constraintTop_toBottomOf="@id/AlimentacionAnimal" />
+            app:layout_constraintStart_toStartOf="@+id/backgroundImage"
+            app:layout_constraintTop_toBottomOf="@id/ApellidosUsuario" />
 
         <TextView
-            android:id="@+id/DescripcionAnimal"
+            android:id="@+id/RolUsuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Descripcion"
+            android:text="Rol"
             android:textColor="@color/dark_green"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/AlimentacionAnimal"
-            app:layout_constraintTop_toBottomOf="@+id/AnioAnimal" />
+            app:layout_constraintStart_toStartOf="@+id/CorreoUsuario"
+            app:layout_constraintTop_toBottomOf="@id/CorreoUsuario" />
 
         <TextView
-            android:id="@+id/AnioIngreso"
+            android:id="@+id/TelefonoUsuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="228dp"
-            android:layout_marginTop="12dp"
-            android:text="FechaIngreso"
+            android:layout_marginTop="4dp"
+            android:text="Telefono"
             android:textColor="@color/dark_green"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/DescripcionAnimal" />
+            app:layout_constraintStart_toStartOf="@+id/CorreoUsuario"
+            app:layout_constraintTop_toBottomOf="@+id/RolUsuario" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
