--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="dark_green">#2A8F44</color>
     <color name="olive_green">#6B8E23</color>
     <color name="aqua_green">#13EAC9</color>
+    <color name="teal_700">#008080</color>
 </resources>
