--- a/app/src/main/res/layout/activity_insertar_animales.xml
+++ b/app/src/main/res/layout/activity_insertar_animales.xml
@@ -8,6 +8,24 @@
     tools:context=".AccionesAnimales.InsertarAnimales">
 
     <EditText
+        android:id="@+id/tbNumeroChip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint="Número de Chip"
+        android:inputType="text"
+        android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
         android:id="@+id/tbNombreAnimal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -23,7 +41,7 @@
         android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tbNumeroChip" />
 
     <EditText
         android:id="@+id/tbRaza"
@@ -97,35 +115,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbAnioNacimiento" />
 
-    <EditText
-        android:id="@+id/tbFechaIngreso"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:hint="Fecha Ingreso"
-        android:inputType="date"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/olive_green"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbDescripcion" />
+    <!-- Placeholder image -->
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="187dp"
         android:layout_height="159dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="21dp"
         android:background="@drawable/edittext_background"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbFechaIngreso"
-        app:srcCompat="@drawable/imginicio" /> <!-- Placeholder image -->
+        app:layout_constraintTop_toBottomOf="@+id/tbDescripcion"
+        app:srcCompat="@drawable/imginicio" />
 
     <Button
         android:id="@+id/bGuardarAnimal"
@@ -142,3 +143,4 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
